

BUG FIXES:
- OpenHoldem no longer performs unnecessary Poker Tracker database queries when we are not using
  a compatible site. (quiqsilver)
  
- Formula Dialog stays open untill File->New and File->Open completes. Toolbar button 
  sometimes stays pressed after Formula Dialog gets closed. (jumpingfences)
  

v1.6.0 2008-02-22
NEW STUFF:
- Table maps using fuzzy fonts are now utilized correctly in the scraper engine.

- OpenHoldem and OpenScrape now use an identical CTransform class (this is found in the
  transform.cpp/.h files).
  
- Formula Editor (Thanks Spew for the code)
  - Added help links to Wiki and Forum (Help/Wiki, Help/Forum)
  - Added popup help for symbols.  Look at the formula tree, select the "Symbols" tab,
    and hover your mouse pointer over the symbol that you are looking for help on.

- In a further attempt to reduce mis-swags, an additional mouse click on the edit box
  has been made after the text is deleted, and before the SWAG text is entered.
  (Autoplayer::do_swag)
  
- Added option to double click on action buttons.  This may help in dealing with those
  sites that have buttons that are "hard" to push.  
  Edit/Preferences/Autoplayer/Button Clicking Method (Thanks, Winngy for the idea)
  
- Added option to disable all symbol caching.  (Thanks, Matrix for the idea)
  Edit/Preferences/Symbols/Disable all Symbol Caching.
  

BUG FIXES:  
- Seeding of random number generator moved to COpenHoldemApp::InitInstance, and seed 
  now uses higher quality LowPart of QueryPerformanceCounter.  All other instances of
  "srand" have been removed. (Thanks, Miathan) 

- PokerPro: f$play was using value returned from f$call accidentally. This is a cut'n'paste 
  typo that has been corrected.  (Thanks HTC for the bug find & Spew for the code fix)  
  (PokerPro::DoAutoplayer)
  
- PokerPro: when connected to a poker pro server, m_holdem_state[m_ndx].m_title would always
  be blank.  (Thanks to Bozo for the bug find and Spew for the code fix).
