@@ -4,15 +4,10 @@
 #include "debug.h"
 #include "OpenHoldem.h"
 #include "scraper.h"
-#include "OpenHoldemDoc.h"
-#include "DialogFormulaScintilla.h"
-#include "MainFrm.h"
 #include "global.h"
 #include "inlines/eval.h"
 #include "autoplayer.h"
-#include "dll_extension.h"
 #include "PokerPro.h"
-#include "winsock2.h"
 #include "GameState.h"
 #include "DialogScraperOutput.h"
 #include "pokertracker.h"
